[package]
name = "rocksolid"
version = "2.4.2"
edition = "2024"
authors = ["Excerion Sun <dev@excsn.com>"]
license = "MPL-2.0"

# Metadata for crates.io
description = "An ergonomic persistence layer over RocksDB, offering Column Family support, transactions (CF-aware), batching, merge routing, value expiry, and performance tuning."
readme = "README.md"
repository = "https://github.com/excsn/rocksolid"
documentation = "https://docs.rs/rocksolid"
keywords = ["rocksdb", "database", "kv-store", "transaction", "batch"]
categories = ["database", "database-implementations"]

[dependencies]
bytevec = "^0.2"
log = "^0.4"
matchit = "^0.8"
natlex_sort = { version = "^0.1", optional = true }
natord = { version = "^1.0", optional = true }
num_cpus = "^1"
once_cell = "^1"
parking_lot = "^0.12"
paste = "^1.0"
rmp = "^0.8"
rmp-serde = "^1.3"
rocksdb = { version = "^0.24", default-features = false }
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
thiserror = "^2.0"

[dev-dependencies]
chrono = "^0.4"
env_logger = "^0.11"
tempfile = "^3.3"

[features]
full = ["default", "snappy", "zstd", "zlib", "bzip2", "natlex_sort", "nat_sort"]
default = ["multi-threaded-cf", "lz4"]
multi-threaded-cf = ["rocksdb/multi-threaded-cf"]
lz4 = ["rocksdb/lz4"]
snappy = ["rocksdb/snappy"]
zstd = ["rocksdb/zstd"]
zlib = ["rocksdb/zlib"]
bzip2 = ["rocksdb/bzip2"]
# Comparators
natlex_sort = ["dep:natlex_sort"]
nat_sort = ["dep:natord"]