[package]
name = "rocksolid"
version = "2.5.4"
edition = "2024"
authors = ["Excerion Sun <dev@excsn.com>"]
license = "MPL-2.0"

description = "An ergonomic, high-level RocksDB wrapper for Rust. Features CF-aware optimistic & pessimistic transactions, advanced routing for merge operators and compaction filters, performance tuning profiles, batching, TTL values, and DAO macros."
readme = "README.md"
repository = "https://github.com/excsn/rocksolid"
documentation = "https://docs.rs/rocksolid"
keywords = ["rocksdb", "database", "kv-store", "transaction", "batch"]
categories = ["database", "database-implementations"]

[dependencies]
base62 = { version = "2", optional = true }
bytevec = "^0.2"
either = "1.8"
log = "^0.4"
matchit = "^0.8"
natlex_sort = { version = "^0.1", optional = true }
natord = { version = "^1.0", optional = true }
num_cpus = "^1"
once_cell = "^1"
parking_lot = "^0.12"
paste = "^1.0"
rmp = "^0.8"
rmp-serde = "^1.3"
rocksdb = { version = "^0.24", default-features = false }
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
thiserror = "^2.0"

[dev-dependencies]
chrono = "^0.4"
env_logger = "^0.11"
serial_test = "3.2.0"
tempfile = "^3.3"

[features]
full = ["default", "base62", "snappy", "zstd", "zlib", "bzip2", "natlex_sort", "nat_sort"]
default = ["multi-threaded-cf", "lz4"]
multi-threaded-cf = ["rocksdb/multi-threaded-cf"]
lz4 = ["rocksdb/lz4"]
snappy = ["rocksdb/snappy"]
zstd = ["rocksdb/zstd"]
zlib = ["rocksdb/zlib"]
bzip2 = ["rocksdb/bzip2"]
# Comparators
natlex_sort = ["dep:natlex_sort"]
nat_sort = ["dep:natord"]
test-utils = []
base62 = ["dep:base62"]